added speed input field

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <button id="pause">Pause</button>
     <button id="reset">Reset</button>
 
+    Speed: <input type="number" id="speed" placeholder="updates per second" value="1.0">
+
     <div id="canvas-div">
       <canvas id="board" width="200" height="200"></canvas>
     </div>
