added sequence description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="sub-title">A game inspired by John Conways "Game of Life".</div>
 
-    <div id="desc">Hello, life. Insert your sequence below.</div>
+    <div id="desc">Hello, life. Insert your sequence below. A sequence must be 9 characters long, the first 8 using either 0, 1, 2 or 3 and the last character a 0 or 1.</div>
 
     <!--
 
