--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div id="title">gol4</div>
@@ -41,6 +41,6 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="/gol4.js" type="text/javascript"></script>
+    <script src="./gol4.js" type="text/javascript"></script>
   </body>
 </html>
