added link to GH on main page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div id="title">gol4</div>
+    <div id="title">gol4 - <a href="https://github.com/jessehorne/gol4">GitHub</a></div>
 
     <div id="sub-title">A game inspired by John Conways "Game of Life".</div>
 
